@@ -4,6 +4,7 @@ Database update scripts can be found under sql/update directory.
 
 Version 1.7.2
 - 'Select' attribute fixed and enabled
+- Fixed problem with dissapearing custom regex value
 
 Version 1.7.1
 - fix for formdefinitions, when process_class not set post action should be 'email'
